[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 312.0
margin_top = 25.0
margin_right = 712.0
margin_bottom = 575.0
rect_min_size = Vector2( 400, 150 )
custom_constants/separation = 50

[node name="ReadButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 150.0
rect_min_size = Vector2( 400, 150 )
text = "READ"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AssemblyButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 200.0
margin_right = 400.0
margin_bottom = 350.0
rect_min_size = Vector2( 400, 150 )
text = "ASSEMBLY"

[node name="ExitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 400.0
margin_right = 400.0
margin_bottom = 550.0
rect_min_size = Vector2( 400, 150 )
text = "EXIT"

[connection signal="pressed" from="CenterContainer/VBoxContainer/ReadButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/AssemblyButton" to="." method="_on_AssemblyButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
